<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FKalkulator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="op_dod">+</string>
    <string name="op_ode">-</string>
    <string name="op_mno">*</string>
    <string name="op_dzi">/</string>
    <string name="name_app">SicioKalkulator</string>

</resources>
